# dotfiles

./: .gitignore  .secrets.baseline  .yamllint.yaml  LICENSE  README.md  biome.json  bootstrap.sh  manifest.toml  prek.toml  pyproject.toml  skills-lock.json
.github/: renovate.json
deploy/: _manifest.py  deploy.py
deploy/components/: cargo_tools.py  go_tools.py  node_tools.py  packages.py  python_tools.py
dots/: _types.py  claude.py  cli.py  diff.py  install.py  pi.py  skills.py  state.py  status.py  sync.py  templates.py
home/: .emacs  .gitconfig  .mbsyncrc  .npmrc  .npmrc.tmpl  .tmux.conf  .vimrc  .xonshrc  .zshrc  xonsh_requirements.txt
home/.claude/: CLAUDE.md  settings.json
home/.claude/commands/: commit.md  review.md  standup.md
home/.config/: gitignore  starship.toml
home/.config/altimate-code/: altimate-code.json
home/.config/atuin/: config.toml
home/.config/xonsh/: config.json
home/.copilot/: mcp-config.json
home/.emacs.d/: Cask  configurations.el  functions.el  init.el
home/.emacs.d/patches/: README.md  python-treesit-fixes.el
home/.pi-lens/: config.json
home/.pi/agent/: mcp.json  models.json  pi-worktrees.config.json  settings.json
home/.pi/agent/extensions/: compact-threshold.ts  virtual-cwd.ts
home/.pi/agent/extensions/agents-md/: index.ts
home/.pi/agent/extensions/plan-mode/: index.ts  utils.ts
home/.pi/agent/npm/: package.json
home/.pi/agent/skills/planning-mode/: SKILL.md
