[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles management CLI"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4",
    "pyinfra>=3",
    "rich>=13",
]

[project.scripts]
dots = "dots.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dots"]
