[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal dotfiles management CLI"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4",
    # Pin to git main until pyinfra 3.8 ships; 3.7 has a gevent+Python-3.13
    # signature-mismatch bug in connectors/util.py (issue #1652 / PR #1653).
    # Revert to "pyinfra>=3.8" once released on PyPI.
    "pyinfra @ git+https://github.com/pyinfra-dev/pyinfra.git",
    "rich>=13",
]

[project.scripts]
dots = "dots.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dots"]
